fix: handle course dialog overflow

--- a/src/app/courses/courses.scss
+++ b/src/app/courses/courses.scss
@@ -46,3 +46,16 @@ planet-courses {
     }
   }
 }
+
+.course-table-container {
+  display: flex;
+  flex-direction: column;
+  height: v.$view-container-height;
+  overflow: hidden;
+}
+
+.card-table {
+  flex: 1;
+  min-height: 0;
+  overflow: auto;
+}
